<resources>
    <string name="app_name">Eventia</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_to_eventia">Welcome to Eventia</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

</resources>