<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anddroid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        anddroid:layout_constraintBottom_toTopOf="@+id/password"
        anddroid:layout_constraintEnd_toEndOf="parent"
        anddroid:layout_constraintStart_toStartOf="parent"
        anddroid:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        anddroid:layout_constraintBottom_toTopOf="@+id/forgot_password"
        anddroid:layout_constraintEnd_toEndOf="parent"
        anddroid:layout_constraintStart_toStartOf="parent"
        anddroid:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="185dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/login"
        anddroid:layout_constraintBottom_toBottomOf="parent"
        anddroid:layout_constraintEnd_toEndOf="parent"
        anddroid:layout_constraintStart_toStartOf="parent"
        anddroid:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="71dp"
        android:text="@string/forgot_password"
        anddroid:layout_constraintBottom_toTopOf="@+id/login_button"
        anddroid:layout_constraintEnd_toEndOf="@+id/password"
        anddroid:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>